--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </li>
                         
                         <li class="nav__list-item">
-                            <a href="#" class="nav__list-item--link">Thông tin</a>
+                            <a href="info-1.html" class="nav__list-item--link">Thông tin</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
                                     <a href="#" class="nav__list-option-item--link">Câu chuyện về chúng tôi</a>
@@ -221,7 +221,7 @@
                                     </div>
                                      
                                     <div class="main-menu__list-item--box">
-                                        <img src="./assets/img/menu2.png" alt="" class="main-menu__list-item--img">
+                                        <img src="./assets/img/menu4.png" alt="" class="main-menu__list-item--img">
                                     </div>
                                 </a>
                             </li>
@@ -355,7 +355,7 @@
                     <div class="footer-contact">
                         <div class="footer-contact__text">Connect with us</div>
                         <div class="footer-contact__socials">
-                            <a href="" class="footer-contact__socials-icon-link">
+                            <a href="https://www.facebook.com/jimindngtint/" target="_blank" class="footer-contact__socials-icon-link">
                                 <i class="footer-contact__socials-icon fa-brands fa-facebook"></i>
                             </a>
                             <a href="" class="footer-contact__socials-icon-link">
