--- a/info-3.html
+++ b/info-3.html
@@ -39,34 +39,34 @@
                             <a href="info-1.html" class="nav__list-item--link nav__list-item--link--active">Thông tin</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Câu chuyện về chúng tôi</a>
+                                    <a href="info-1.html" class="nav__list-option-item--link">Câu chuyện về chúng tôi</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Hệ thống nhà hàng</a>
+                                    <a href="info-2.html" class="nav__list-option-item--link">Hệ thống nhà hàng</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Khách hàng của chúng tôi</a>
+                                    <a href="info-3.html" class="nav__list-option-item--link">Khách hàng của chúng tôi</a>
                                 </li>
                             </ul>
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="#" class="nav__list-item--link">Thực đơn</a>
+                            <a href="menu-1.html" class="nav__list-item--link">Thực đơn</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Bếp trưởng gợi ý</a>
+                                    <a href="menu-1.html" class="nav__list-option-item--link">Bếp trưởng gợi ý</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Đồ ăn</a>
+                                    <a href="menu-2.html" class="nav__list-option-item--link">Đồ ăn</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Đồ uống</a>
+                                    <a href="menu-3.html" class="nav__list-option-item--link">Đồ uống</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Set combo</a>
+                                    <a href="menu-4.html" class="nav__list-option-item--link">Set combo</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Thực đơn mới</a>
+                                    <a href="menu-5.html" class="nav__list-option-item--link">Thực đơn mới</a>
                                 </li>
                             </ul>
                         </li>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
 
-                <!-- info content body info1 -->
+                <!-- info content body info3 -->
                 <div class="app-container__content info-app-container__content">
                     <div class="info3-content__body">
                         <div class="info3-content__body-banner">
