--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="grid">
                 <!-- nav  -->
                 <div class="nav">
-                    <a href="#" class="nav__logo-link">
+                    <a href="index.html" class="nav__logo-link">
                         <div class="nav__logo">
                             <img src="./assets/img/logo-le-monde-steak-v3.png" alt="" class="nav__logo-img">
                         </div>
@@ -72,20 +72,20 @@
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="#" class="nav__list-item--link">Khuyến mãi</a>
+                            <a href="sale.html" class="nav__list-item--link">Khuyến mãi</a>
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="#" class="nav__list-item--link">Blog</a>
+                            <a href="blog-1.html" class="nav__list-item--link">Blog</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Nguyên liệu nhà làm</a>
+                                    <a href="blog-1.html" class="nav__list-option-item--link">Nguyên liệu nhà làm</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Phong cách ẩm thực</a>
+                                    <a href="blog-2.html" class="nav__list-option-item--link">Phong cách ẩm thực</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Trải nghiệm nhà hàng</a>
+                                    <a href="blog-3.html" class="nav__list-option-item--link">Trải nghiệm nhà hàng</a>
                                 </li>
                             </ul>
                         </li>
@@ -127,7 +127,7 @@
                         <!-- welcome-blog  -->
                         <div class="content__welcome-blog grid__row">
                             <div class="content__welcome-blog-item grid__column-3">
-                                <a href="" class="content__welcome-blog-item--link">
+                                <a href="blog-1.html" class="content__welcome-blog-item--link">
                                     <div class="content__welcome-blog-item--background">
                                         <img src="./assets/img/blog1-1.png" alt="" class="content__welcome-blog-item--img">
                                     </div>
@@ -138,7 +138,7 @@
                             </div>
 
                             <div class="content__welcome-blog-item grid__column-3">
-                                <a href="" class="content__welcome-blog-item--link">
+                                <a href="blog-2.html" class="content__welcome-blog-item--link">
                                     <div class="content__welcome-blog-item--background">
                                         <img src="./assets/img/blog2.jpg" alt="" class="content__welcome-blog-item--img">
                                     </div>
@@ -149,7 +149,7 @@
                             </div>
 
                             <div class="content__welcome-blog-item grid__column-3">
-                                <a href="" class="content__welcome-blog-item--link">
+                                <a href="blog-3.html" class="content__welcome-blog-item--link">
                                     <div class="content__welcome-blog-item--background">
                                         <img src="./assets/img/blog3.png" alt="" class="content__welcome-blog-item--img">
                                     </div>
@@ -171,7 +171,7 @@
 
                         <ul class="main-menu__list">
                             <li class="main-menu__list-item">
-                                <a href="#" class="main-menu__list-item--link">
+                                <a href="menu-1.html" class="main-menu__list-item--link">
                                     <div class="main-menu__list-item--link-label">
                                         <i class="main-menu__list-item--icon fa-regular fa-star"></i>
                                         <i class="main-menu__list-item--icon main-menu__list-item--icon-active fa-solid fa-star"></i>
@@ -185,7 +185,7 @@
                             </li>
 
                             <li class="main-menu__list-item">
-                                <a href="#" class="main-menu__list-item--link">
+                                <a href="menu-2.html" class="main-menu__list-item--link">
                                     <div class="main-menu__list-item--link-label">
                                         <i class="main-menu__list-item--icon fa-regular fa-star"></i>
                                         <i class="main-menu__list-item--icon main-menu__list-item--icon-active fa-solid fa-star"></i>
@@ -199,7 +199,7 @@
                             </li>
 
                             <li class="main-menu__list-item">
-                                <a href="#" class="main-menu__list-item--link">
+                                <a href="menu-3.html" class="main-menu__list-item--link">
                                     <div class="main-menu__list-item--link-label">
                                         <i class="main-menu__list-item--icon fa-regular fa-star"></i>
                                         <i class="main-menu__list-item--icon main-menu__list-item--icon-active fa-solid fa-star"></i>
@@ -213,7 +213,7 @@
                             </li>
 
                             <li class="main-menu__list-item">
-                                <a href="#" class="main-menu__list-item--link">
+                                <a href="menu-4.html" class="main-menu__list-item--link">
                                     <div class="main-menu__list-item--link-label">
                                         <i class="main-menu__list-item--icon fa-regular fa-star"></i>
                                         <i class="main-menu__list-item--icon main-menu__list-item--icon-active fa-solid fa-star"></i>
@@ -227,7 +227,7 @@
                             </li>
 
                             <li class="main-menu__list-item">
-                                <a href="#" class="main-menu__list-item--link">
+                                <a href="menu-5.html" class="main-menu__list-item--link">
                                     <div class="main-menu__list-item--link-label">
                                         <i class="main-menu__list-item--icon fa-regular fa-star"></i>
                                         <i class="main-menu__list-item--icon main-menu__list-item--icon-active fa-solid fa-star"></i>
