--- a/blog-2.html
+++ b/blog-2.html
@@ -51,7 +51,7 @@
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="menu-1.html" class="nav__list-item--link nav__list-item--link--active">Thực đơn</a>
+                            <a href="menu-1.html" class="nav__list-item--link ">Thực đơn</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
                                     <a href="menu-1.html" class="nav__list-option-item--link">Bếp trưởng gợi ý</a>
@@ -76,7 +76,7 @@
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="blog-1.html" class="nav__list-item--link">Blog</a>
+                            <a href="blog-1.html" class="nav__list-item--link nav__list-item--link--active">Blog</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
                                     <a href="blog-1.html" class="nav__list-option-item--link">Nguyên liệu nhà làm</a>
@@ -113,7 +113,7 @@
             <div class="grid">
                 <!-- banner  -->
                 <div class="app-container__banner">
-                    <img src="./assets/img/banner_menu_1_1557766876.jpg" alt="" class="app-container__banner-img">
+                    <img src="./assets/img/banner_hinh_anh_am_thuc_nha_lam_1557486443.png" alt="" class="app-container__banner-img">
                 </div>
 
                 <!-- base menu  -->
@@ -121,48 +121,30 @@
                     <!-- menu dùng chung nhiều trang khác  -->
                     <div class="menu-base">
                         <ul class="menu-base--list">
-                            <li class="menu-base--item menu-base--item--active">
-                                <a href="menu-1.html" class="menu-base--link">
+                            <li class="menu-base--item ">
+                                <a href="blog-1.html" class="menu-base--link">
                                     <div class="menu-base--icon-box">
-                                        <i class="menu-base--icon fa-solid fa-heart-circle-check"></i>
+                                        <i class="menu-base--icon fa-solid fa-carrot"></i>
                                     </div>
-                                    <div class="menu-base--label">Bếp trưởng gợi ý</div>
+                                    <div class="menu-base--label">Nguyên liệu nhà làm</div>
                                 </a>
                             </li>
                             
-                            <li class="menu-base--item">
-                                <a href="menu-2.html" class="menu-base--link">
+                            <li class="menu-base--item menu-base--item--active">
+                                <a href="blog-2.html" class="menu-base--link">
                                     <div class="menu-base--icon-box">
-                                        <i class="menu-base--icon fa-solid fa-utensils"></i>
+                                        <i class="menu-base--icon fa-solid fa-bowl-food"></i>
                                     </div>
-                                    <div class="menu-base--label">Đồ ăn</div>
+                                    <div class="menu-base--label">Phong cách ẩm thực</div>
                                 </a>
                             </li>
 
                             <li class="menu-base--item">
-                                <a href="menu-3.html" class="menu-base--link">
+                                <a href="blog-3.html" class="menu-base--link">
                                     <div class="menu-base--icon-box">
-                                        <i class="menu-base--icon fa-solid fa-champagne-glasses"></i>
+                                        <i class="menu-base--icon fa-brands fa-docker"></i>
                                     </div>
-                                    <div class="menu-base--label">Đồ uống</div>
-                                </a>
-                            </li>
-
-                            <li class="menu-base--item">
-                                <a href="menu-4.html" class="menu-base--link">
-                                    <div class="menu-base--icon-box">
-                                        <i class="menu-base--icon fa-solid fa-kitchen-set"></i>
-                                    </div>
-                                    <div class="menu-base--label">Set combo</div>
-                                </a>
-                            </li>
-
-                            <li class="menu-base--item">
-                                <a href="menu-5.html" class="menu-base--link">
-                                    <div class="menu-base--icon-box">
-                                        <i class="menu-base--icon fa-solid fa-file-circle-check"></i>
-                                    </div>
-                                    <div class="menu-base--label">Thực đơn mới</div>
+                                    <div class="menu-base--label">Trải nghiệm nhà hàng</div>
                                 </a>
                             </li>
 
@@ -170,46 +152,45 @@
                     </div>
                 </div>
 
-                <!-- info content body menu1 -->
-                <div class="app-container__content menu-app-container__content">
-                    <div class="menu1-content__body">
-                        <ul class="base-menu-buy__list">
-                            <li class="base-menu-buy__item">
-                                <div class="base-menu-buy__item--img-box">
-                                    <img src="./assets/img/menu-1-1.png" alt="" class="base-menu-buy__item--img">
+                <!-- blog content body blog2 -->
+                <div class="app-container__content blog-app-container__content">
+                    <div class="base-blog">
+                        <ul class="base-blog__list">
+                            <li class="base-blog__item">
+                                <div class="base-blog__item--img-box">
+                                    <img src="./assets/img/blog-2-1.jpg" alt="" class="base-blog__item--img">
                                 </div>
 
-                                <div class="base-menu-buy__item--content-box">
-                                    <a href="#" class="base-menu-buy__item--link">Steak Bò Mỹ - 140Gr</a>
-                                    <p class="base-menu-buy__item--desc">Steak kiểu Pháp áp chảo ở nhiệt độ thích hợp, bên ngoài xem xém nhưng bên trong vẫn ửng hồng. Đặc biệt, lớp trên steak sử dụng bơ Café de Paris, khi thưởng thức bạn sẽ thấy dậy lên hương thơm vô cùng hấp dẫn.</p>
-                                    <div class="base-menu-buy__item--price">149.000 VND</div>
-                                </div>
-                            </li>
-
-                            <li class="base-menu-buy__item">
-                                <div class="base-menu-buy__item--img-box">
-                                    <img src="./assets/img/menu-1-2.png" alt="" class="base-menu-buy__item--img">
-                                </div>
-
-                                <div class="base-menu-buy__item--content-box">
-                                    <a href="#" class="base-menu-buy__item--link">Chocolate Browniesr</a>
-                                    <p class="base-menu-buy__item--desc">Brownie sử dụng nguyên liệu socola nguyên chất, kết cấu ẩm mịn như bánh bông lan nhưng không quá mềm. Là loại bánh được yêu thích nhất trên thế giới với vị ngọt vừa phải, hơi nhẫn đắng của socola và thơm phức.</p>
-                                    <div class="base-menu-buy__item--price">19.000 VND</div>
+                                <div class="base-blog__item--content-box">
+                                    <a href="" class="base-blog__item--content-heading">Bít Tết kiểu Pháp - Hương vị độc đáo, đánh gục vị giác người thưởng thức</a>
+                                    <div class="base-blog__item--content-desc">Đến Le Monde lựa chọn phần bít tết ngọt mềm, thơm lừng và mang hương vị Pháp chắc chắn sẽ mang đến cho bạn những trải nghiệm hoàn toàn thú vị.</div>
+                                    <a href="" class="button-base">Xem tiếp</a>
                                 </div>
                             </li>
 
-                            <li class="base-menu-buy__item">
-                                <div class="base-menu-buy__item--img-box">
-                                    <img src="./assets/img/menu-1-3.png" alt="" class="base-menu-buy__item--img">
+                            <li class="base-blog__item">
+                                <div class="base-blog__item--img-box">
+                                    <img src="./assets/img/blog-2-2.jpg" alt="" class="base-blog__item--img">
                                 </div>
 
-                                <div class="base-menu-buy__item--content-box">
-                                    <a href="#" class="base-menu-buy__item--link">Pate Gan Vịt & Mứt Cà Tím</a>
-                                    <p class="base-menu-buy__item--desc">Lấy cảm hứng từ pate gan ngỗng nổi tiếng của người Pháp, pate gan vịt tại Le Monde được tẩm ướp bằng lá thơm, rượu mạnh Pháp, sau đó trải qua nhiều bước chế biến tỉ mỉ, công phu. Món ăn bên ngoài chín, bên trong màu hồng bắt mắt. Thưởng thức cùng với bánh mì và mứt cà tím vô cùng ăn ý.</p>
-                                    <div class="base-menu-buy__item--price">49.000 VND</div>
+                                <div class="base-blog__item--content-box">
+                                    <a href="" class="base-blog__item--content-heading">Đùi vịt nấu chậm - Nét tinh tế trong ẩm thực Pháp</a>
+                                    <div class="base-blog__item--content-desc">Đùi vịt nấu chậm là món ăn truyền thống của người Pháp, không những thế còn được ưa chuộng ở nhiều nhà hàng trên khắp thế giới, kể cả Việt Nam. Không chỉ nổi tiếng về sự phức tạp trong...</div>
+                                    <a href="" class="button-base">Xem tiếp</a>
                                 </div>
                             </li>
 
+                            <li class="base-blog__item">
+                                <div class="base-blog__item--img-box">
+                                    <img src="./assets/img/blog-2-3.jpg" alt="" class="base-blog__item--img">
+                                </div>
+
+                                <div class="base-blog__item--content-box">
+                                    <a href="" class="base-blog__item--content-heading">Khám phá nét độc đáo trong ẩm thực Pháp</a>
+                                    <div class="base-blog__item--content-desc">Ẩm thực Pháp nổi tiếng khắp nơi với các món ăn được chế biến lạ mắt, lạ miệng, kết hợp độc đáo rượu vào chế biến và thưởng thức các món ăn, góp phần làm đậm đà thêm hương...</div>
+                                    <a href="" class="button-base">Xem tiếp</a>
+                                </div>
+                            </li>
 
                         </ul>
                     </div>
