--- a/info-3.html
+++ b/info-3.html
@@ -23,7 +23,7 @@
             <div class="grid">
                 <!-- nav  -->
                 <div class="nav">
-                    <a href="#" class="nav__logo-link">
+                    <a href="index.html" class="nav__logo-link">
                         <div class="nav__logo">
                             <img src="./assets/img/logo-le-monde-steak-v3.png" alt="" class="nav__logo-img">
                         </div>
@@ -72,20 +72,20 @@
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="#" class="nav__list-item--link">Khuyến mãi</a>
+                            <a href="sale.html" class="nav__list-item--link">Khuyến mãi</a>
                         </li>
 
                         <li class="nav__list-item">
-                            <a href="#" class="nav__list-item--link">Blog</a>
+                            <a href="blog-1.html" class="nav__list-item--link">Blog</a>
                             <ul class="nav__list-option">
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Nguyên liệu nhà làm</a>
+                                    <a href="blog-1.html" class="nav__list-option-item--link">Nguyên liệu nhà làm</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Phong cách ẩm thực</a>
+                                    <a href="blog-2.html" class="nav__list-option-item--link">Phong cách ẩm thực</a>
                                 </li>
                                 <li class="nav__list-option-item">
-                                    <a href="#" class="nav__list-option-item--link">Trải nghiệm nhà hàng</a>
+                                    <a href="blog-3.html" class="nav__list-option-item--link">Trải nghiệm nhà hàng</a>
                                 </li>
                             </ul>
                         </li>
@@ -156,7 +156,7 @@
                     <div class="info3-content__body">
                         <div class="info3-content__body-banner">
                             <div class="info3-content__body-banner-img-box">
-                                <img src="./assets/img/son-tung5.jpg" alt="" class="info3-content__body-banner-img">
+                                <img src="./assets/img/khach-hang.gif" alt="" class="info3-content__body-banner-img">
                             </div>                           
                         </div>
 
