--- a/blog-1.html
+++ b/blog-1.html
@@ -133,7 +133,7 @@
                             <li class="menu-base--item">
                                 <a href="blog-2.html" class="menu-base--link">
                                     <div class="menu-base--icon-box">
-                                        <i class="menu-base--icon fa-solid fa-bowl-food"></i>
+                                        <i class="menu-base--icon fa-solid fa-kitchen-set"></i>
                                     </div>
                                     <div class="menu-base--label">Phong cách ẩm thực</div>
                                 </a>
