--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@
 </body>
 </html>
 
-<!-- echo "# Second-web-Restaurant-" >> README.md
+<!-- echo "# Lemontin" >> README.md
 git init
 git add README.md
 git commit -m "first commit"
 git branch -M main
-git remote add origin https://github.com/gittint/Second-datweb-Restaurant.git
+git remote add origin https://github.com/gittint/Lemontin.git
 git push -u origin main -->
 
