--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                         <img src="./assets/img/local1.png" alt="" class="content-local__item-img">
                                     </div>
                                     <div class="content-local__item-content">
-                                        <div class="content-local__item-content-header">
+                                        <div class="content-local__item-content-header" onclick="getmap(0)">
                                             Le Monde Steak Hà Nội 1
                                         </div>
                                         <div class="content-local__item-content-text">
@@ -281,7 +281,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="content-local__item-map content-local__item-map--active">
+                                    <div class="content-local__item-map content-local__item-map--active" >
                                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.820923446237!2d105.84317294948336!3d20.999814294075357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ac762d07f055%3A0x927f2d7abb74f088!2zUC4gVHLhuqduIMSQ4bqhaSBOZ2jEqWEsIEhhaSBCw6AgVHLGsG5nLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1649580516472!5m2!1svi!2s" width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                     </div>
                                 </div>
@@ -294,7 +294,7 @@
                                         <img src="./assets/img/local2.png" alt="" class="content-local__item-img">
                                     </div>
                                     <div class="content-local__item-content">
-                                        <div class="content-local__item-content-header">
+                                        <div class="content-local__item-content-header" onclick="getmap(1)">
                                             Le Monde Steak Hà Nội 2
                                         </div>
                                         <div class="content-local__item-content-text">
@@ -316,7 +316,7 @@
                                         <img src="./assets/img/local3.jpg" alt="" class="content-local__item-img">
                                     </div>
                                     <div class="content-local__item-content">
-                                        <div class="content-local__item-content-header">
+                                        <div class="content-local__item-content-header" onclick="getmap(2)">
                                             Le Monde Steak Hà Nội 3
                                         </div>
                                         <div class="content-local__item-content-text">
@@ -339,7 +339,7 @@
                                         <img src="./assets/img/local1.png" alt="" class="content-local__item-img">
                                     </div>
                                     <div class="content-local__item-content">
-                                        <div class="content-local__item-content-header">
+                                        <div class="content-local__item-content-header" onclick="getmap(3)">
                                             Le Monde Steak Hà Nội 4
                                         </div>
                                         <div class="content-local__item-content-text">
