--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div class="app-container">
+        <div class="app-container hi">
             <div class="grid">
                 <!-- banner  -->
                 <div class="app-container__banner">
@@ -370,7 +370,7 @@
                     <div class="footer-contact">
                         <div class="footer-contact__text">Connect with us</div>
                         <div class="footer-contact__socials">
-                            <a href="https://www.facebook.com/jimindngtint/" target="_blank" class="footer-contact__socials-icon-link">
+                            <a href="#" class="footer-contact__socials-icon-link">
                                 <i class="footer-contact__socials-icon fa-brands fa-facebook"></i>
                             </a>
                             <a href="" class="footer-contact__socials-icon-link">
@@ -393,11 +393,4 @@
 </body>
 </html>
 
-<!-- echo "# Lemontin" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M "main"
-git remote add origin https://github.com/gittint/Lemontin.git
-git push -u origin "main" -->
 
