--- a/info-2.html
+++ b/info-2.html
@@ -13,7 +13,7 @@
     <!-- font chu-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <!-- icon -->
-    <link rel="stylesheet" href="./assets/font/fontawesome-free-6.1.1-web/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     
 </head>
 <body>
@@ -210,7 +210,7 @@
                     <div class="footer-contact">
                         <div class="footer-contact__text">Connect with us</div>
                         <div class="footer-contact__socials">
-                            <a href="https://www.facebook.com/jimindngtint/" target="_blank" class="footer-contact__socials-icon-link">
+                            <a href="#" class="footer-contact__socials-icon-link">
                                 <i class="footer-contact__socials-icon fa-brands fa-facebook"></i>
                             </a>
                             <a href="" class="footer-contact__socials-icon-link">
@@ -230,12 +230,4 @@
     </div>
 </body>
 </html>
-
-<!-- echo "# Second-web-Restaurant-" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/gittint/Second-datweb-Restaurant.git
-git push -u origin main -->
 
